// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevUINav tests::Process and Tracing enabled Snapshot testing audit investigation link props 1`] = `
<DevUINav
  pathname="/Audit"
>
  <Nav
    aria-label="Nav"
    onSelect={[Function]}
    onToggle={[Function]}
    ouiaSafe={true}
    theme="dark"
  >
    <nav
      aria-label="Nav"
      className="pf-c-nav"
      data-ouia-component-id="OUIA-Generated-Nav-4"
      data-ouia-component-type="PF4/Nav"
      data-ouia-safe={true}
    >
      <NavList
        ariaLeftScroll="Scroll left"
        ariaRightScroll="Scroll right"
      >
        <ul
          className="pf-c-nav__list"
          onScroll={[Function]}
        >
          <NavItem
            isActive={false}
            key="processes-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-19"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="processes-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Processes"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="processes-nav"
                  href="/Processes"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="processes-nav"
                    href="/Processes"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Workflows
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="jobs-management-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-20"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="jobs-management-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/JobsManagement"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="jobs-management-nav"
                  href="/JobsManagement"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="jobs-management-nav"
                    href="/JobsManagement"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Jobs
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="task-inbox-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-21"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="task-inbox-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/TaskInbox"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="task-inbox-nav"
                  href="/TaskInbox"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="task-inbox-nav"
                    href="/TaskInbox"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Tasks
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="forms-list-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-22"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="forms-list-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Forms"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="forms-list-nav"
                  href="/Forms"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="forms-list-nav"
                    href="/Forms"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Forms
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="monitoring-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-23"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="monitoring-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Monitoring"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="monitoring-nav"
                  href="/Monitoring"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="monitoring-nav"
                    href="/Monitoring"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Monitoring
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={true}
            key="audit-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-24"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current="page"
                className="pf-c-nav__link pf-m-current"
                data-ouia-navigation-name="audit-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Audit"
              >
                <LinkAnchor
                  aria-current="page"
                  className="pf-c-nav__link pf-m-current"
                  data-ouia-navigation-name="audit-nav"
                  href="/Audit"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current="page"
                    className="pf-c-nav__link pf-m-current"
                    data-ouia-navigation-name="audit-nav"
                    href="/Audit"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Audit investigation
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
        </ul>
      </NavList>
    </nav>
  </Nav>
</DevUINav>
`;

exports[`DevUINav tests::Process and Tracing enabled Snapshot testing with forms list props 1`] = `
<DevUINav
  pathname="/Forms"
>
  <Nav
    aria-label="Nav"
    onSelect={[Function]}
    onToggle={[Function]}
    ouiaSafe={true}
    theme="dark"
  >
    <nav
      aria-label="Nav"
      className="pf-c-nav"
      data-ouia-component-id="OUIA-Generated-Nav-3"
      data-ouia-component-type="PF4/Nav"
      data-ouia-safe={true}
    >
      <NavList
        ariaLeftScroll="Scroll left"
        ariaRightScroll="Scroll right"
      >
        <ul
          className="pf-c-nav__list"
          onScroll={[Function]}
        >
          <NavItem
            isActive={false}
            key="processes-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-13"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="processes-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Processes"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="processes-nav"
                  href="/Processes"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="processes-nav"
                    href="/Processes"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Workflows
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="jobs-management-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-14"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="jobs-management-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/JobsManagement"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="jobs-management-nav"
                  href="/JobsManagement"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="jobs-management-nav"
                    href="/JobsManagement"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Jobs
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="task-inbox-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-15"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="task-inbox-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/TaskInbox"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="task-inbox-nav"
                  href="/TaskInbox"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="task-inbox-nav"
                    href="/TaskInbox"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Tasks
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={true}
            key="forms-list-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-16"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current="page"
                className="pf-c-nav__link pf-m-current"
                data-ouia-navigation-name="forms-list-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Forms"
              >
                <LinkAnchor
                  aria-current="page"
                  className="pf-c-nav__link pf-m-current"
                  data-ouia-navigation-name="forms-list-nav"
                  href="/Forms"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current="page"
                    className="pf-c-nav__link pf-m-current"
                    data-ouia-navigation-name="forms-list-nav"
                    href="/Forms"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Forms
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="monitoring-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-17"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="monitoring-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Monitoring"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="monitoring-nav"
                  href="/Monitoring"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="monitoring-nav"
                    href="/Monitoring"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Monitoring
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="audit-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-18"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="audit-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Audit"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="audit-nav"
                  href="/Audit"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="audit-nav"
                    href="/Audit"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Audit investigation
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
        </ul>
      </NavList>
    </nav>
  </Nav>
</DevUINav>
`;

exports[`DevUINav tests::Process and Tracing enabled Snapshot testing with jobs management props 1`] = `
<DevUINav
  pathname="/JobsManagement"
>
  <Nav
    aria-label="Nav"
    onSelect={[Function]}
    onToggle={[Function]}
    ouiaSafe={true}
    theme="dark"
  >
    <nav
      aria-label="Nav"
      className="pf-c-nav"
      data-ouia-component-id="OUIA-Generated-Nav-2"
      data-ouia-component-type="PF4/Nav"
      data-ouia-safe={true}
    >
      <NavList
        ariaLeftScroll="Scroll left"
        ariaRightScroll="Scroll right"
      >
        <ul
          className="pf-c-nav__list"
          onScroll={[Function]}
        >
          <NavItem
            isActive={false}
            key="processes-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-7"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="processes-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Processes"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="processes-nav"
                  href="/Processes"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="processes-nav"
                    href="/Processes"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Workflows
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={true}
            key="jobs-management-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-8"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current="page"
                className="pf-c-nav__link pf-m-current"
                data-ouia-navigation-name="jobs-management-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/JobsManagement"
              >
                <LinkAnchor
                  aria-current="page"
                  className="pf-c-nav__link pf-m-current"
                  data-ouia-navigation-name="jobs-management-nav"
                  href="/JobsManagement"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current="page"
                    className="pf-c-nav__link pf-m-current"
                    data-ouia-navigation-name="jobs-management-nav"
                    href="/JobsManagement"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Jobs
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="task-inbox-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-9"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="task-inbox-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/TaskInbox"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="task-inbox-nav"
                  href="/TaskInbox"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="task-inbox-nav"
                    href="/TaskInbox"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Tasks
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="forms-list-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-10"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="forms-list-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Forms"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="forms-list-nav"
                  href="/Forms"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="forms-list-nav"
                    href="/Forms"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Forms
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="monitoring-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-11"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="monitoring-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Monitoring"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="monitoring-nav"
                  href="/Monitoring"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="monitoring-nav"
                    href="/Monitoring"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Monitoring
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="audit-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-12"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="audit-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Audit"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="audit-nav"
                  href="/Audit"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="audit-nav"
                    href="/Audit"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Audit investigation
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
        </ul>
      </NavList>
    </nav>
  </Nav>
</DevUINav>
`;

exports[`DevUINav tests::Process and Tracing enabled Snapshot testing with processes props 1`] = `
<DevUINav
  pathname="/Processes"
>
  <Nav
    aria-label="Nav"
    onSelect={[Function]}
    onToggle={[Function]}
    ouiaSafe={true}
    theme="dark"
  >
    <nav
      aria-label="Nav"
      className="pf-c-nav"
      data-ouia-component-id="OUIA-Generated-Nav-1"
      data-ouia-component-type="PF4/Nav"
      data-ouia-safe={true}
    >
      <NavList
        ariaLeftScroll="Scroll left"
        ariaRightScroll="Scroll right"
      >
        <ul
          className="pf-c-nav__list"
          onScroll={[Function]}
        >
          <NavItem
            isActive={true}
            key="processes-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-1"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current="page"
                className="pf-c-nav__link pf-m-current"
                data-ouia-navigation-name="processes-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Processes"
              >
                <LinkAnchor
                  aria-current="page"
                  className="pf-c-nav__link pf-m-current"
                  data-ouia-navigation-name="processes-nav"
                  href="/Processes"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current="page"
                    className="pf-c-nav__link pf-m-current"
                    data-ouia-navigation-name="processes-nav"
                    href="/Processes"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Workflows
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="jobs-management-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-2"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="jobs-management-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/JobsManagement"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="jobs-management-nav"
                  href="/JobsManagement"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="jobs-management-nav"
                    href="/JobsManagement"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Jobs
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="task-inbox-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-3"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="task-inbox-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/TaskInbox"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="task-inbox-nav"
                  href="/TaskInbox"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="task-inbox-nav"
                    href="/TaskInbox"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Tasks
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="forms-list-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-4"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="forms-list-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Forms"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="forms-list-nav"
                  href="/Forms"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="forms-list-nav"
                    href="/Forms"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Forms
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="monitoring-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-5"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="monitoring-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Monitoring"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="monitoring-nav"
                  href="/Monitoring"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="monitoring-nav"
                    href="/Monitoring"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Monitoring
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="audit-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-6"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="audit-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Audit"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="audit-nav"
                  href="/Audit"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="audit-nav"
                    href="/Audit"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Audit investigation
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
        </ul>
      </NavList>
    </nav>
  </Nav>
</DevUINav>
`;

exports[`DevUINav tests::Sections disabled Snapshot testing audit investigation link props 1`] = `
<DevUINav
  pathname="/Audit"
>
  <Nav
    aria-label="Nav"
    onSelect={[Function]}
    onToggle={[Function]}
    ouiaSafe={true}
    theme="dark"
  >
    <nav
      aria-label="Nav"
      className="pf-c-nav"
      data-ouia-component-id="OUIA-Generated-Nav-8"
      data-ouia-component-type="PF4/Nav"
      data-ouia-safe={true}
    >
      <NavList
        ariaLeftScroll="Scroll left"
        ariaRightScroll="Scroll right"
      >
        <ul
          className="pf-c-nav__list"
          onScroll={[Function]}
        >
          <NavItem
            isActive={true}
            key="audit-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-40"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current="page"
                className="pf-c-nav__link pf-m-current"
                data-ouia-navigation-name="audit-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Audit"
              >
                <LinkAnchor
                  aria-current="page"
                  className="pf-c-nav__link pf-m-current"
                  data-ouia-navigation-name="audit-nav"
                  href="/Audit"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current="page"
                    className="pf-c-nav__link pf-m-current"
                    data-ouia-navigation-name="audit-nav"
                    href="/Audit"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Audit investigation
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
        </ul>
      </NavList>
    </nav>
  </Nav>
</DevUINav>
`;

exports[`DevUINav tests::Sections disabled Snapshot testing with forms list props 1`] = `
<DevUINav
  pathname="/Forms"
>
  <Nav
    aria-label="Nav"
    onSelect={[Function]}
    onToggle={[Function]}
    ouiaSafe={true}
    theme="dark"
  >
    <nav
      aria-label="Nav"
      className="pf-c-nav"
      data-ouia-component-id="OUIA-Generated-Nav-7"
      data-ouia-component-type="PF4/Nav"
      data-ouia-safe={true}
    >
      <NavList
        ariaLeftScroll="Scroll left"
        ariaRightScroll="Scroll right"
      >
        <ul
          className="pf-c-nav__list"
          onScroll={[Function]}
        >
          <NavItem
            isActive={false}
            key="processes-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-35"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="processes-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Processes"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="processes-nav"
                  href="/Processes"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="processes-nav"
                    href="/Processes"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Workflows
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="jobs-management-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-36"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="jobs-management-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/JobsManagement"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="jobs-management-nav"
                  href="/JobsManagement"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="jobs-management-nav"
                    href="/JobsManagement"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Jobs
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="task-inbox-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-37"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="task-inbox-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/TaskInbox"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="task-inbox-nav"
                  href="/TaskInbox"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="task-inbox-nav"
                    href="/TaskInbox"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Tasks
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={true}
            key="forms-list-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-38"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current="page"
                className="pf-c-nav__link pf-m-current"
                data-ouia-navigation-name="forms-list-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Forms"
              >
                <LinkAnchor
                  aria-current="page"
                  className="pf-c-nav__link pf-m-current"
                  data-ouia-navigation-name="forms-list-nav"
                  href="/Forms"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current="page"
                    className="pf-c-nav__link pf-m-current"
                    data-ouia-navigation-name="forms-list-nav"
                    href="/Forms"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Forms
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="monitoring-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-39"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="monitoring-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Monitoring"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="monitoring-nav"
                  href="/Monitoring"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="monitoring-nav"
                    href="/Monitoring"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Monitoring
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
        </ul>
      </NavList>
    </nav>
  </Nav>
</DevUINav>
`;

exports[`DevUINav tests::Sections disabled Snapshot testing with jobs management props 1`] = `
<DevUINav
  pathname="/JobsManagement"
>
  <Nav
    aria-label="Nav"
    onSelect={[Function]}
    onToggle={[Function]}
    ouiaSafe={true}
    theme="dark"
  >
    <nav
      aria-label="Nav"
      className="pf-c-nav"
      data-ouia-component-id="OUIA-Generated-Nav-6"
      data-ouia-component-type="PF4/Nav"
      data-ouia-safe={true}
    >
      <NavList
        ariaLeftScroll="Scroll left"
        ariaRightScroll="Scroll right"
      >
        <ul
          className="pf-c-nav__list"
          onScroll={[Function]}
        >
          <NavItem
            isActive={false}
            key="processes-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-30"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="processes-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Processes"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="processes-nav"
                  href="/Processes"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="processes-nav"
                    href="/Processes"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Workflows
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={true}
            key="jobs-management-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-31"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current="page"
                className="pf-c-nav__link pf-m-current"
                data-ouia-navigation-name="jobs-management-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/JobsManagement"
              >
                <LinkAnchor
                  aria-current="page"
                  className="pf-c-nav__link pf-m-current"
                  data-ouia-navigation-name="jobs-management-nav"
                  href="/JobsManagement"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current="page"
                    className="pf-c-nav__link pf-m-current"
                    data-ouia-navigation-name="jobs-management-nav"
                    href="/JobsManagement"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Jobs
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="task-inbox-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-32"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="task-inbox-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/TaskInbox"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="task-inbox-nav"
                  href="/TaskInbox"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="task-inbox-nav"
                    href="/TaskInbox"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Tasks
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="forms-list-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-33"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="forms-list-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Forms"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="forms-list-nav"
                  href="/Forms"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="forms-list-nav"
                    href="/Forms"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Forms
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="monitoring-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-34"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="monitoring-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Monitoring"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="monitoring-nav"
                  href="/Monitoring"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="monitoring-nav"
                    href="/Monitoring"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Monitoring
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
        </ul>
      </NavList>
    </nav>
  </Nav>
</DevUINav>
`;

exports[`DevUINav tests::Sections disabled Snapshot testing with processes props 1`] = `
<DevUINav
  pathname="/Processes"
>
  <Nav
    aria-label="Nav"
    onSelect={[Function]}
    onToggle={[Function]}
    ouiaSafe={true}
    theme="dark"
  >
    <nav
      aria-label="Nav"
      className="pf-c-nav"
      data-ouia-component-id="OUIA-Generated-Nav-5"
      data-ouia-component-type="PF4/Nav"
      data-ouia-safe={true}
    >
      <NavList
        ariaLeftScroll="Scroll left"
        ariaRightScroll="Scroll right"
      >
        <ul
          className="pf-c-nav__list"
          onScroll={[Function]}
        >
          <NavItem
            isActive={true}
            key="processes-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-25"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current="page"
                className="pf-c-nav__link pf-m-current"
                data-ouia-navigation-name="processes-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Processes"
              >
                <LinkAnchor
                  aria-current="page"
                  className="pf-c-nav__link pf-m-current"
                  data-ouia-navigation-name="processes-nav"
                  href="/Processes"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current="page"
                    className="pf-c-nav__link pf-m-current"
                    data-ouia-navigation-name="processes-nav"
                    href="/Processes"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Workflows
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="jobs-management-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-26"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="jobs-management-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/JobsManagement"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="jobs-management-nav"
                  href="/JobsManagement"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="jobs-management-nav"
                    href="/JobsManagement"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Jobs
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="task-inbox-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-27"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="task-inbox-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/TaskInbox"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="task-inbox-nav"
                  href="/TaskInbox"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="task-inbox-nav"
                    href="/TaskInbox"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Tasks
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="forms-list-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-28"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="forms-list-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Forms"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="forms-list-nav"
                  href="/Forms"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="forms-list-nav"
                    href="/Forms"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Forms
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="monitoring-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-29"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="monitoring-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Monitoring"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="monitoring-nav"
                  href="/Monitoring"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="monitoring-nav"
                    href="/Monitoring"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Monitoring
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
        </ul>
      </NavList>
    </nav>
  </Nav>
</DevUINav>
`;
